.github/supply-chain-fixtures/fail/store-postgres-tag/crates/koine-store-postgres/tests/support/mod.rs
let container = Postgres::default().with_tag("17").start();
